# LearnOpenGl

./: .gitignore  CMakeLists.txt
includes/glad/: glad.h
lib/: glad.c
src/: main.cpp
